# budgie-desktop-environment

./: .gitmodules  README.md  budgie-desktop-environment.gsettings-override  live-installer-translations.py  meson.build  validate-translations.py
.tx/: config
applications/: budgie-gnome-calendar.desktop  budgie-plank-prefs.desktop
bde/: tilix_alt.bde  tilix_f12.bde  visualspace-left.bde  visualspace-right.bde
budgie-control-center/: introduction.list
codename-wallpapers/: ubuntu-budgie-codename-wallpapers.xml
crystal-dock/: crystal-dock-autostart.desktop
debian/: README.Debian  budgie-arm-environment.install  budgie-arm-environment.lintian-overrides  budgie-desktop-common.gsettings-override  budgie-desktop-common.install  budgie-desktop-common.links  budgie-desktop-common.lintian-overrides  budgie-desktop-common.postrm  budgie-desktop-common.preinst  budgie-desktop-environment.conffiles  budgie-desktop-environment.gsettings-override  budgie-desktop-environment.install  budgie-desktop-environment.links  budgie-desktop-environment.lintian-overrides  budgie-desktop-environment.maintscript  budgie-desktop-environment.manpages  budgie-desktop-environment.postinst  budgie-desktop-environment.postrm  budgie-desktop-environment.preinst  budgie-live-settings.install  budgie-live-settings.links  budgie-live-settings.ubuntu-budgie-installer.user.service  budgie-raspi-settings.install  budgie-window-shuffler-toggle.1  changelog  control  copyright  files  plank-cleanup.sh  rules  template-cleanup.sh  window-shuffler.install  window-shuffler.links
gdmcheck/: gdmcheck.sh
(+195 files in other folders)
